--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ mongoengine = "*"
 marshmallow = "*"
 python-json-logger = "*"
 flask-script = "2.0.5"
+pylint-flask = "*"
+pylint-flask-sqlalchemy = "*"
 
 [dev-packages]
 pylint = "*"
