--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react",
     "babel"
   ],
-  "author": "",
+  "author": "muktevigk",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.8",
