adding some logging stmts to repo
Signed-off-by: Gopi Krishna M <gopi.muktevi@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
- 
+
 # Distribution / packaging
 .Python
 build/
@@ -128,3 +128,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 frontend/node_modules
+.vscode/*
